Update tmux comment levels

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,8 @@
 #
 # Main options
 #
-set-option -g prefix C-w
+
+set-option -g prefix ^W
 set-option -g base-index 0
 set-option -g bell-action any
 set-option -g visual-bell off
@@ -11,7 +12,7 @@ set-option -g default-terminal xterm-256color
 ## Fix issue with tmux and macOS open command
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-# Make sure we have no delay when pressing Esc (for neovim)
+## Make sure we have no delay when pressing Esc (for neovim)
 set -sg escape-time 0
 
 #
@@ -58,7 +59,6 @@ bind -Tcopy-mode-vi 'y' send -X copy-selection
 #
 
 ## Windows
-set-option -g mode-keys vi
 set-option -g window-status-current-style bold
 set-option -g window-status-format '#[fg=yellow]#I#[fg=yellow]:#W  '
 set-option -g window-status-current-format '#[fg=yellow,bg=black]#I#[fg=yellow,bg=black]:#[fg=green]#W#[fg=black,bold]  '
