--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,8 @@ set-option -g visual-bell off
 set-option -g history-limit 5000
 set-option -g default-terminal xterm-256color
 
+set-window-option mode-keys vi
+
 ## Fix issue with tmux and macOS open command
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
