Order session alphabetically in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -74,3 +74,5 @@ set-option -g status-bg black
 set-option -g status-fg white
 set-option -g status-left '#[fg=default]#[fg=default,bold]'
 set-option -g status-right ''
+
+bind s choose-tree -sZ -O name
