Update Vim config

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -7,5 +7,6 @@
   "diagnostic-languageserver.formatFiletypes": {
     "elixir": "mix_format",
     "eelixir": "mix_format"
-  }
+  },
+  "elixirLS.mixEnv": "dev"
 }
