--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,9 +61,8 @@ bind -Tcopy-mode-vi 'y' send -X copy-selection
 #
 
 ## Windows
-set-option -g window-status-current-style bold
-set-option -g window-status-format '#[fg=yellow]#I#[fg=yellow]:#W  '
-set-option -g window-status-current-format '#[fg=yellow,bg=black]#I#[fg=yellow,bg=black]:#[fg=green]#W#[fg=black,bold]  '
+set-window-option -g window-status-format ' #[fg=white]#I#[fg=brightgreen]|#[fg=yellow]#W '
+set-window-option -g window-status-current-format ' #[fg=white]#I#[fg=white]|#[fg=default]#W #[bg=black]'
 
 ## Panes
 set-option -g pane-border-style fg=white
