--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["*"],
+  "coc.preferences.formatOnSaveFiletypes": ["elixir", "css", "typescript", "javascript", "json"],
   "diagnostic-languageserver.filetypes": {
     "elixir": ["mix_credo"],
     "eelixir": ["mix_credo"]
@@ -7,6 +7,5 @@
   "diagnostic-languageserver.formatFiletypes": {
     "elixir": "mix_format",
     "eelixir": "mix_format"
-  },
-  "elixirLS.mixEnv": "dev"
+  }
 }
