--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,8 +4,10 @@
     "scss",
     "css",
     "typescript",
+    "typescriptreact",
     "javascript",
-    "json"
+    "json",
+    "ruby"
   ],
   "diagnostic-languageserver.filetypes": {
     "elixir": ["mix_credo"],
@@ -14,5 +16,6 @@
   "diagnostic-languageserver.formatFiletypes": {
     "elixir": "mix_format",
     "eelixir": "mix_format"
-  }
+  },
+  "elixir.pathToElixirLS": "/opt/homebrew/Cellar/elixir-ls/0.18.1/bin/elixir-ls"
 }
